# appcom-djinni-common

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Readme.md  ac-ms-common-sdk.djinni  build-android.sh  build-ios.sh  build-macos.sh  build_android.sh  build_ios.sh  conanfile.py  install-deps-android.sh  install-deps-ios.sh  install-deps.sh  run-djinni.sh  run_djinni.sh
.travis/provider/: maven-download-file.sh  maven-upload.sh
android/: CMakeLists.txt
cmake/: ios.toolchain.cmake
djinni/: appcom-common.djinni  assets.djinni  filesystem.djinni  http.djinni  logger.djinni  threads.djinni
ios/: CMakeLists.txt
macos/: CMakeLists.txt
src/android/eu/appcom/djinni/common/: AndroidAssetManager.java  AndroidDependencyManager.java  AndroidFilesystemHandler.java  AndroidHttpHandler.java  AndroidPlatformThreads.java
src/android/eu/appcom/microservices/sdk/common/: AndroidAssetManager.java  AndroidFilesystemHandler.java  AndroidHttpHandler.java  AndroidPlatformThreads.java
src/cpp/: CppLogger.cpp  CppLogger.hpp  CppPlatformThreads.hpp  Logger.cpp  Logger.hpp  cpp_platform_threads.hpp
src/java/eu/appcom/djinni/common/: JavaPlatformThreads.java
src/java/eu/appcom/microservices/sdk/common/: JavaPlatformThreads.java
src/objc/: ACObjCDependencyManager.h  ACObjCDependencyManager.m  ACObjCFilesystemHandler.h  ACObjCFilesystemHandler.m  ACObjCHttpHandler.h  ACObjCHttpHandler.m  ACObjCPlatformThreads.h  ACObjCPlatformThreads.m
